--- a/scss/blocks/_connect.scss
+++ b/scss/blocks/_connect.scss
@@ -1,5 +1,5 @@
 .connect {
-    height: calc(100svh - 165px);
+    height: calc(100svh - 100px);
 
     @include landscape {
         height: 100svh;
@@ -12,12 +12,7 @@
         padding-top: 10%;
         @include flexConfig($display: flex, $dir: column, $justify: center, $grow: 1);
 
-        @include md-d {
-            align-items: center;
-            text-align: center;
-        }
-
-        @include lg-u {
+        @include md-u {
             padding-left: 15%;
         }
     }
@@ -30,7 +25,7 @@
     }
 
     &__email {
-        @include fontConfig("SFProDisplayHeavy", clamp(1.31rem, 0.35rem + 5.13vw, 2.81rem), var(--text-color), 0.285px);
+        @include fontConfig("SFProDisplayHeavy", clamp(1.3rem, 0.35rem + 5.13vw, 2.81rem), var(--text-color), 0.285px);
         text-decoration: none;
         background: linear-gradient(to right, #9e7d5b, #c3a41a, #8eac50, #94715f);
         background-clip: text;
@@ -50,11 +45,17 @@
     }
 
     &__info {
-        @include fontConfig("SFProDisplayRegular", clamp(0.94rem, 0.62rem + 1.71vw, 1.44rem), var(--text-color), 0.285px);
+        @include fontConfig("SFProDisplayRegular", clamp(1.1rem, 0.96rem + 0.75vw, 1.44rem), var(--text-color), 0.285px);
         margin-top: 15px;
+        text-align: left;
 
         @include sm-u {
             max-width: 600px;
+            padding-left: 5px;
+        }
+
+        @include sm-d {
+            max-width: 500px;
         }
 
         @include landscape {
@@ -65,7 +66,7 @@
 .container {
     @at-root .connect & {
         @include esm {
-            padding: 20px 10px;
+            padding: 20px;
         }
     }
 }
