--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -115,9 +115,9 @@ body {
     }
 
     &__link {
-        @include fontConfig("SFProDisplayRegular", 17px, var(--text-color));
+        @include fontConfig("SFProDisplayRegular", 19px, var(--text-color));
         text-decoration: none;
-        padding: 14px 16px;
+        padding: 12px 16px;
         border-radius: 12px;
 
         &:hover:not(.picked) {
@@ -189,7 +189,7 @@ body {
     cursor: pointer;
 
     &__title {
-        @include fontConfig("SFProDisplayRegular", 17px, var(--text-color));
+        @include fontConfig("SFProDisplayRegular", 19px, var(--text-color));
         padding-right: 10px;
         opacity: 1;
         -webkit-transition: opacity 0.1s ease;
@@ -235,5 +235,5 @@ body {
     text-decoration-color: var(--clr-accent);
     text-decoration: underline;
     text-decoration-thickness: 2px;
-    text-underline-offset: 4px;
+    text-underline-offset: 6px;
 }
