--- a/scss/blocks/_name.scss
+++ b/scss/blocks/_name.scss
@@ -14,7 +14,7 @@
 
     &__image {
         padding: 5px;
-        width: 85%;
+        width: 73%;
         max-width: 330px;
         border-radius: 50%;
         border: 3px solid var(--clr-accent);
